# pyos-package

./: LICENSE.txt  README.md  pyproject.toml
src/pyos_package/: __about__.py  __init__.py  add_numbers.py
