[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyos-package"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "clin94118", email = "clin@ccsf.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/clin94118/pyos-package#readme"
Issues = "https://github.com/clin94118/pyos-package/issues"
Source = "https://github.com/clin94118/pyos-package"

[tool.hatch.version]
path = "src/pyos_package/__about__.py"
